Kubernetes notes update

--- a/AWS/AWS Cloud Practitioner/05. Amazon S3.md
+++ b/AWS/AWS Cloud Practitioner/05. Amazon S3.md
@@ -76,7 +76,7 @@ The replication happens asynchronously and can be performed in the same or anoth
 There are a few types of security enforcements that can be applied to S3 buckets:
 
 - **User Based:**
-	- [IAM Policies](03.%20IAM.md#policies) - Which API calls should be allowed for a specific IAM user.
+	- [IAM Policies](03.%20IAM.md#Policies) - Which API calls should be allowed for a specific IAM user.
 - **Resource Based:**
 	- Bucket Policies - Bucket wide rules from the S3 console. Allows cross account;
 	- Object Access Control List (ACL) - Finer grain (can be disabled);
@@ -162,10 +162,10 @@ Amazon S3 can have one of the following storage classes:
 
 S3 Transfer Acceleration is a feature of Amazon S3 that **speeds up data transfers to and from** S3 buckets.
 
-It uses the Amazon [CloudFront](02.%20AWS%20Global%20Infrastructure.md#cloudfront) global network of edge locations as a proxy.
+It uses the Amazon [CloudFront](02.%20AWS%20Global%20Infrastructure.md#CloudFront%20(CDN)) global network of edge locations as a proxy.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - S3 Transfer Acceleration.png" alt="AWS - S3 Transfer Acceleration" />
+  <img src="../../Assets/Images/Diagrams/AWS/S3 Transfer Acceleration.png" alt="S3 Transfer Acceleration" />
 </div>
 
 ## Amazon Athena (Analytics)
@@ -175,5 +175,5 @@ Amazon Athena is a serverless query service to perform analytics against S3 obje
 Is uses standard SQL language to query the files and supports CSV, JSON, ORC, Avro and Parquet.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Athena.png" alt="AWS - Athena" />
+  <img src="../../Assets/Images/Diagrams/AWS/Athena.png" alt="Athena" />
 </div>
