--- a/AWS/AWS Cloud Practitioner/06. Databases.md
+++ b/AWS/AWS Cloud Practitioner/06. Databases.md
@@ -28,8 +28,8 @@ tags:
 
 AWS provides multiple types of databases that can be split in to:
 
-- [SQL Databases](#sql-databases) (Serverless & Non-Serverless);
-- [No SQL Databases](#no-sql-databases) (Serverless & Non-Serverless);
+- [SQL Databases](#SQL%20Databases) (Serverless & Non-Serverless);
+- [No SQL Databases](#No%20SQL%20Databases) (Serverless & Non-Serverless);
 
 ## SQL Databases
 
@@ -48,7 +48,7 @@ Replication is used to scale read traffic by creating read replicas of the prima
 It is possible to create up to 15 asynchronous read replicas, however, **only the primary DB accepts writes**.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - RDS Read Replicas.png" alt="AWS - RDS Read Replicas" />
+  <img src="../../Assets/Images/Diagrams/AWS/RDS Read Replicas.png" alt="RDS Read Replicas" />
 </div>
 
 ### Amazon Aurora (Serverless)
@@ -59,7 +59,7 @@ Key points:
 
 - Offers up to 5x the performance of a standard MySQL and 3x of PostgreSQL;
 - Storage automatically scales from 10 GB to 128 TB;
-- Costs more that [RDS](#amazon-rds) (~20%);
+- Costs more that [RDS](#Amazon%20RDS) (~20%);
 - Provides automated backups, snapshots and replication;
 
 ## No SQL Databases
@@ -75,7 +75,7 @@ Key points:
 - Ideal for real time applications, IoT, gaming and mobile apps;
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - DynamoDB.png" alt="AWS - DynamoDB" />
+  <img src="../../Assets/Images/Diagrams/AWS/DynamoDB.png" alt="DynamoDB" />
 </div>
 
 #### DynamoDB Accelerator (DAX)
@@ -104,7 +104,7 @@ Use cases: Social networks, recommendation engines, fraud detection.
 The AWS Database Migration Service helps migrate databases to AWS quickly and securely.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - DMS.png" alt="AWS - DMS" />
+  <img src="../../Assets/Images/Diagrams/AWS/DMS.png" alt="DMS" />
 </div>
 
 Key points:
