--- a/AWS/AWS Cloud Practitioner/07. Compute Services.md
+++ b/AWS/AWS Cloud Practitioner/07. Compute Services.md
@@ -27,15 +27,15 @@ Amazon ECS is a fully managed **container orchestration service** for running Do
 **Note:** While ECS handles placement, scaling and scheduling of containers, these will run on user-managed [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances.
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - ECS.png" alt="AWS - ECS" />
+  <img src="../../Assets/Images/Diagrams/AWS/ECS.png" alt="ECS" />
 </div>
 
 ### AWS Fargate (Serverless)
 
-AWS Fargate is a c**ompute engine for containers** that works with [ECS](#amazon-ecs-elastic-container-service) and [EKS](#amazon-eks-elastic-kubernetes-service).
+AWS Fargate is a c**ompute engine for containers** that works with [ECS](#Amazon%20ECS%20(Elastic%20Container%20Service)) and [EKS](#Amazon%20EKS%20(Elastic%20Kubernetes%20Service)).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - Fargate.png" alt="AWS - Fargate" />
+  <img src="../../Assets/Images/Diagrams/AWS/Fargate.png" alt="Fargate" />
 </div>
 
 **Note:** There is no need to manage [EC2](04.%20Amazon%20EC2.md#04.%20EC2) instances when using Fargate.
@@ -44,22 +44,22 @@ AWS Fargate is a c**ompute engine for containers** that works with [ECS](#amazon
 
 Amazon ECR is a fully managed, **private Docker image repository** for storing and managing container images.
 
-It is integrated with [ECS](#amazon-ecs-elastic-container-service) and [Fargate](#aws-fargate-serverless).
+It is integrated with [ECS](#amazon-ecs-elastic-container-service) and [Fargate](#AWS%20Fargate%20(Serverless)).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - ECR.png" alt="AWS - ECR" />
+  <img src="../../Assets/Images/Diagrams/AWS/ECR.png" alt="ECR" />
 </div>
 
-**Note:** Supports lifecycle policies and [IAM](03.%20IAM.md)-based access control.
+**Note:** Supports lifecycle policies and [IAM](03.%20IAM.md#03.%20IAM)-based access control.
 
 ### Amazon EKS (Elastic Kubernetes Service)
 
-Amazon EKS is a **managed [Kubernetes](01.%20Overview.md#01--overview) control plane** for running containerized applications using Kubernetes.
+Amazon EKS is a **managed [Kubernetes](01.%20Overview.md#01.%20Overview) control plane** for running containerized applications using Kubernetes.
 
-It supports standard `kubectl`commands and AWS managed the k8s control plane, while the user managed the worker nodes (via [EC2](04.%20Amazon%20EC2.md#04.%20EC2) or [Fargate](#aws-fargate-serverless)).
+It supports standard `kubectl`commands and AWS managed the k8s control plane, while the user managed the worker nodes (via [EC2](04.%20Amazon%20EC2.md#04.%20EC2) or [Fargate](#AWS%20Fargate%20(Serverless))).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - EKS.png" alt="AWS - EKS" />
+  <img src="../../Assets/Images/Diagrams/AWS/EKS.png" alt="EKS" />
 </div>
 
 ## Lambda Functions (Serverless)
@@ -70,11 +70,11 @@ Key points:
 
 - Automatically scales with demand;
 - Pay-per-request and duration billing;
-- Supports triggers from [S3](05.%20Amazon%20S3.md), [Amazon API Gateway](08.%20Integration%20Services.md#amazon-api-gateway), EventBridge and more;
+- Supports triggers from [S3](05.%20Amazon%20S3.md), [Amazon API Gateway](08.%20Integration%20Services.md#Amazon%20API%20Gateway%20(Serverless)), [EventBridge](11.%20Cloud%20Monitoring.md#EventBridge%20(Serverless)) and more;
 - Ideal for short-lived tasks (e.g. Image processing, data transformation).
 
 <div align="center">
-  <img src="../../Assets/Images/AWS - S3.png" alt="AWS - S3" />
+  <img src="../../Assets/Images/Diagrams/AWS/Lambda.png" alt="Lambda" />
 </div>
 
 ## AWS Batch
@@ -85,5 +85,5 @@ Key points:
 
 - Automatically provisions compute ([EC2](04.%20Amazon%20EC2.md#04.%20EC2));
 - Jobs are defined using Docker images;
-- Runs on [ECS](#amazon-ecs-elastic-container-service) in the background;
+- Runs on [ECS](#Amazon%20ECS%20(Elastic%20Container%20Service)) in the background;
 - Ideal for analytics, simulations or large scale data processing.
