--- a/AWS/AWS Cloud Practitioner/08. Integration Services.md
+++ b/AWS/AWS Cloud Practitioner/08. Integration Services.md
@@ -77,7 +77,7 @@ Key points:
 
 - Supports REST, HTTP and WebSocket APIs;
 - Integrates with [S3](05.%20Amazon%20S3.md), [ECS](07.%20Compute%20Services.md#amazon-ecs-elastic-container-service), [Lambda](07.%20Compute%20Services.md#lambda-functions-serverless) and more;
-- Features throtling, caching, authentication, (Cognito, [IAM](03.%20IAM.md)), API keys and usage plans.
+- Features throtling, caching, authentication, (Cognito, [IAM](03.%20IAM.md#03.%20IAM)), API keys and usage plans.
 
 <div align="center">
   <img src="../../Assets/Images/AWS - API Gateway.png" alt="AWS - API Gateway" />
