--- a/AWS/AWS Cloud Practitioner/10. Security & Compliance.md
+++ b/AWS/AWS Cloud Practitioner/10. Security & Compliance.md
@@ -58,9 +58,9 @@ It can be deployed on:
 
 - Application Load Balancer;
 - [API Gateway](08.%20Integration%20Services.md#amazon-api-gateway-serverless)
-- [CloudFront](02.%20AWS%20Global%20Infrastructure.md#cloudfront-cdn)
+- [CloudFront](02.%20AWS%20Global%20Infrastructure.md#CloudFront%20(CDN))
 
-###  [CloudFront](02.%20AWS%20Global%20Infrastructure.md#cloudfront-cdn) & [Route 53 (DNS)](02.%20AWS%20Global%20Infrastructure.md#route-53-dns)
+###  [CloudFront](02.%20AWS%20Global%20Infrastructure.md#CloudFront%20(CDN)) & [Route 53 (DNS)](02.%20AWS%20Global%20Infrastructure.md#route-53-dns)
 
 These services can be used to enhance DDoS mitigation and availability.
 
@@ -165,6 +165,6 @@ It **helps understand the context behind security findings** and works with [Gua
 
 ## IAM Access Analyzer
 
-IAM Access Analyzer is part of [IAM](03.%20IAM.md) and **analyzes policies to detect unintended access** to resources.
+IAM Access Analyzer is part of [IAM](03.%20IAM.md#03.%20IAM) and **analyzes policies to detect unintended access** to resources.
 
 **Note:** Requires defining a zone of trust.
