--- a/Kubernetes/00. Cheatsheet.md
+++ b/Kubernetes/00. Cheatsheet.md
@@ -29,6 +29,9 @@ tags:
 
 kubectl api-resources                  # Lists all available resources in Kubernetes.
 kubectl explain <resource> --recursive # Explains in detail the available resource properties for YAML definitions.
+kubectl config view                    # Print the current kubeconfig.
+kubectl config use-context <context>   # Switch the context used in kubeconfig.
+kubectl config current-context.        # Print the current kubeconfig context.
 
 #####################
 # Object Management #
@@ -49,8 +52,15 @@ kubectl delete <object>>/<object_name> -n <namespace> # Deletes an object, (e.g.
 # Debug & Logs #
 ################
 
-kubectl describe <object>/<object_name> -n namespace  # Describes the structure of an object, (e.g. pod).
-kubectl logs <object_name> -n <namespace>             # Prints the logs of an object, (e.g. pod).
+kubectl describe <object>/<object_name> -n <namespace>  # Describes the structure of an object, (e.g. pod).
+kubectl logs <object_name> -n <namespace>               # Prints the logs of an object, (e.g. pod).
+
+#################
+# Authorization #
+#################
+
+kubectl auth can-i <command> -n <sandbox>             # Check if the current user has permissions to perform an action.
+kubectl auth can-i <command> -n <sandbox> --as <user> # Check if a user has permissions to perform an action. (Cluster admin performed)
 ```
 
 ### [Node](01.%20Overview.md#Nodes%20(Minions)) commands
