--- a/Kubernetes/01. Overview.md
+++ b/Kubernetes/01. Overview.md
@@ -66,6 +66,22 @@ Kubernetes is composed by the following components:
 
 The API Server acts as the **frontend for Kubernetes**, it is used to interact with the Kubernetes cluster by users, management devices, CLIs, etc.
 
+The Kubernetes API is divided into multiple groups, based on their purpose.
+
+For instance, the following `curl`command to the API Server:
+
+```bash
+curl -X GET http://<cluster-ip>:6443/api/v1/namespaces/default/pods
+```
+
+Is made to the `core`API group, (which includes fundamental resources like [Pods](02.%20Pods.md#02.%20Pods), [Services](05.%20Services.md#05.%20Services), and [Namespaces](06.%20Namespaces.md#06.%20Namespaces)), and translates to the following `kubectl command:
+
+```bash
+kubectl get pods
+```
+
+**Note:** For a list of all API groups and for more detailed information, see the [official docs](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.35/#api-groups).
+
 ### `etcd` Keystore
 
 `etcd` is a distributed reliable keystore used by Kubernetes to **store all data required to manage the cluster**.
