--- a/Kubernetes/02. Pods.md
+++ b/Kubernetes/02. Pods.md
@@ -12,6 +12,11 @@ tags:
   - [Creating new pods](#creating-new-pods)
     - [YAML (Declarative)](#yaml-declarative)
     - [`kubectl` (Imperative)](#kubectl-imperative)
+  - [Static pods](#static-pods)
+    - [Creating new static pods](#creating-new-static-pods)
+      - [Directory location](#directory-location)
+    - [Monitoring static pods](#monitoring-static-pods)
+    - [Why static pods?](#why-static-pods)
   - [Pod Commands](#pod-commands)
     - [Checking pod(s) information](#checking-pods-information)
     - [Editing a pod after it is deployed](#editing-a-pod-after-it-is-deployed)
@@ -76,6 +81,58 @@ To create new pods, using `kubectl` run:
 ```bash
 kubectl run <pod-name> --image <container-image> -n <namespace>
 ```
+
+## Static pods
+
+A static pod is a pod that is **managed directly by the [kubelet](01.%20Overview.md#Kubelet) daemon** on a specific [node](01.%20Overview.md#Nodes%20(Minions)), without the [API server](01.%20Overview.md#API%20Server) observing it.
+
+### Creating new static pods
+
+These pods are created by **manually configuring a directory on the server**, designated to **store information about pods**, from which the [kubelet](01.%20Overview.md#Kubelet) will read the pod definition files.
+
+The [kubelet](01.%20Overview.md#Kubelet) will monitor this directory continuously.
+- If any changes occur in the definition file of a pod, the pod will be re-created;
+- If a pod definition file is present and the running application crashes, it will be restarted;
+- If the definition file of a pod is deleted, the pod will also be deleted.
+
+#### Directory location
+
+Configuring the directory on the server can be done by passing it's location to the [kubelet](01.%20Overview.md#Kubelet) while running the service. Which can be done in two ways:
+
+Specify the option directly in the `kubelet.service`file:
+
+```bash
+ExecStart=/usr/local/bin/kubelet \\
+  --pod-manifet-path=/etc/kubernetes/manifests \\ # Example location.
+  (...)
+```
+
+Or, provide the path to another config file that defines the directory path through `staticPodPath`:
+
+```bash
+ExecStart=/usr/local/bin/kubelet \
+  --config=kubeconfig.yaml
+  (...)
+```
+
+```yaml
+#kubeconfig.yaml
+staticPodPath: /etc/kubernetes/manifests
+```
+
+### Monitoring static pods
+
+Once a static pod is created, the [kubelet](01.%20Overview.md#Kubelet) will automatically try to **create a mirror Pod on the [API server](01.%20Overview.md#API%20Server)**. This means that the pod will be visible on the [API server](01.%20Overview.md#API%20Server), but will not be controlled from there
+
+Even though they are created as read-only pods on the [API server](01.%20Overview.md#API%20Server) they can be listed using the [standard command](#Checking%20pod(s)%20information).
+
+### Why static pods?
+
+Static pods are used to create the components of the control plane as pods on a [node](01.%20Overview.md#Nodes%20(Minions)).
+
+This way, it is not required to download any binaries, configure services or worry about them crashing, since they will automatically be restarted by the [kubelet](01.%20Overview.md#Kubelet).
+
+**Note:** This is how [kubeadm](https://kubernetes.io/docs/setup/production-environment/tools/kubeadm/install-kubeadm/) sets ups a Kubernetes cluster.
 
 ## Pod Commands
 
