--- a/Kubernetes/07. Scheduling.md
+++ b/Kubernetes/07. Scheduling.md
@@ -56,6 +56,8 @@ When a [node](01.%20Overview.md#Nodes%20(Minions)) is tainted, it means that it 
 
 ```bash
 kubectl taint nodes <node> <key>=<value>:<effect>
+# This is also a valid command:
+kubectl taint node <node> <key>=<value>:<effect>
 ```
 
 ### Tolerations
@@ -182,7 +184,7 @@ spec:
 
 The `limits`section sets a limit on how much resources the [pod](02.%20Pods.md#02.%20Pods) can consume.
 
-> What happens when a container tries to exceed it's resource limit?
+> [!QUESTION] What happens when a container tries to exceed it's resource limit?
 > In case of the CPU, the system throttles the CPU so that the container does not exceed it's imposed limit.
 > In case of the memory however, a container can consume more memory than the imposed limit. If this happens often, the pod will be terminated with an Out Of Memory error in the logs.
 
